<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fittrack.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_exercise"
        android:name="com.example.fittrack.ui.exercise.ExerciseFragment"
        android:label="@string/title_exercise"
        tools:layout="@layout/fragment_exercise" />

    <fragment android:id="@+id/navigation_goals"
        android:name="com.example.fittrack.ui.goals.GoalsFragment"
        android:label="@string/title_goals"
        tools:layout="@layout/fragment_goals"
        app:destination="@+id/navigation_goals" />

    <fragment android:id="@+id/navigation_account"
        android:name="com.example.fittrack.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_settings"/>
</navigation>